<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/title"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/install_title" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/install_multirom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/install_multirom"/>
        <CheckBox
            android:id="@+id/install_recovery"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/install_recovery"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <CheckBox
                android:id="@+id/install_kernel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/install_kernel"/>
            <Spinner
                android:id="@+id/kernel_options"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/install_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/install"/>
    </LinearLayout>

</LinearLayout>
