<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ubuntu_card_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:visibility="gone" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/title"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_ubuntu_touch"/>

        <Button android:id="@+id/back_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/back"
            android:textColor="@color/card_title_text"
            android:background="@drawable/transparent_btn"
            android:drawableLeft="@drawable/navigation_back"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/stroke" />

    <TextView android:id="@+id/ubuntu_info_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:text="@string/about_ubuntu_text2" />

</LinearLayout>
