<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ubuntu_card_front"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/title"
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ubuntu_card" />

        <ImageButton android:id="@+id/info_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/back"
            android:background="@drawable/transparent_btn"
            android:src="@drawable/action_about"
            android:padding="4dp"/>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:minHeight="50dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:indeterminateOnly="true" />

        <TextView
            android:id="@+id/error_text"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:ellipsize="end"
            android:visibility="gone"
            android:textStyle="bold"
            android:maxLines="10"
            android:textAlignment="center"
            android:textColor="#FF0000" />

        <LinearLayout
            android:id="@+id/flavour_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavour"/>
            <Spinner
                android:id="@+id/flavour"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/channel_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel"/>
            <Spinner
                android:id="@+id/channel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/version_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"/>
            <Spinner
                android:id="@+id/version"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="200dp"/>
        </LinearLayout>

        <!-- <LinearLayout
            android:id="@+id/destination_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"/>
            <Spinner
                android:id="@+id/destination"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minWidth="200dp"/>
        </LinearLayout> -->

        <Button
            android:id="@+id/install_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/install"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
