<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <LinearLayout android:id="@+id/rom_list_widget_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/rom_list_widget_header">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_launcher"
            android:layout_margin="5dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="#fff"
                android:ellipsize="end"
                android:singleLine="true"/>
            <TextView android:id="@+id/rom_boot_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rom_list_widget"
                android:textColor="#fff"
                android:ellipsize="end"
                android:singleLine="true"/>
        </LinearLayout>

        <ImageButton android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/navigation_refresh"
            android:background="?android:selectableItemBackground"
            android:padding="5dp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ff9f9f9f"/>

    <ListView
        android:id="@+id/rom_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/rom_list_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/rom_list_empty"
        android:drawableLeft="@drawable/action_about"
        android:textColor="#000"
        android:ellipsize="end"/>

</LinearLayout>
